<resources>
    <string name="app_name">ESCPOS Thermal Printer</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="hint_type_text">Type text to print</string>
    <string name="image">Image</string>
    <string name="loading">Loading</string>
    <string name="next">Continue</string>
    <string name="print">Print</string>
    <string name="retry">Retry</string>
    <string name="type_text_to_print">What do you want to print?</string>

    <!-- Errors -->
    <string name="error_validation">Validation error</string>
    <string name="error_validation_edit_text">Please type the text you want to print in order to continue with the process.</string>
</resources>