<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/type_text_to_print_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/type_text_to_print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"/>

    <EditText
        android:id="@+id/type_text_to_print_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/hint_type_text"
        android:textSize="16sp"
        android:gravity="top"
        android:padding="12dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/print_text_button"
        app:layout_constraintEnd_toEndOf="@+id/type_text_to_print_text_view"
        app:layout_constraintStart_toStartOf="@+id/type_text_to_print_text_view"
        app:layout_constraintTop_toBottomOf="@+id/type_text_to_print_text_view" />

    <Button
        android:id="@+id/print_text_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/print"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/type_text_to_print_text_view"
        app:layout_constraintStart_toStartOf="@+id/type_text_to_print_text_view"
        app:layout_constraintTop_toBottomOf="@+id/type_text_to_print_text_view"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/element_progress_bar"
        layout="@layout/element_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>